--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
