--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "framer-motion": "^6.5.1",
+    "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
