--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.7",
     "sass": "^1.54.0",
     "swr": "^1.3.0"
   },
